qr-greeter: embed user code in QR SVG to fix overlap on small screens

--- a/src/qr-greeter/src/qr-greeter@himmelblau-idm.org/stylesheet.css
+++ b/src/qr-greeter/src/qr-greeter@himmelblau-idm.org/stylesheet.css
@@ -4,9 +4,9 @@
 
 .qr-code-container {
     width: 128px;
-    height: 128px;
+    height: 148px;
     max-width: 128px;
-    max-height: 128px;
+    max-height: 148px;
     margin-left: auto;
     margin-right: auto;
 
